--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,8 @@
 :root {
-  --primary-color: #ec1f55;
-  --text-color: #333;
+  --primary-color: #612500;
+  --secondary-color: #612500cc;
+  --text-color: #222;
+  --sub-text-color: #444;
 }
 
 * {
@@ -25,13 +27,13 @@ html *::-webkit-scrollbar {
 }
 
 html *::-webkit-scrollbar-thumb {
-  border-radius: 16px;
-  background-color: rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  background-color: var(--secondary-color);
 }
 
 html *::-webkit-scrollbar-track {
-  border-radius: 0;
-  background-color: rgba(0, 0, 0, 0);
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .background-video {
@@ -46,7 +48,7 @@ html *::-webkit-scrollbar-track {
   position: absolute;
   top: 0;
   left: 0;
-  object-fit: cover;
+  object-fit: fill;
   width: 100%;
   height: 100%;
   pointer-events: none;
@@ -73,15 +75,14 @@ html *::-webkit-scrollbar-track {
 }
 
 .dashboard {
-  width: 450px;
+  width: 350px;
   padding: 16px 16px 14px;
-  /* From https://css.glass */
-  background: rgba(255, 255, 255, 0.53);
+  background: rgba(255, 255, 255, 0.5);
   border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(7px);
-  -webkit-backdrop-filter: blur(7px);
-  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(2px);
+  -webkit-backdrop-filter: blur(2px);
+  border: 3px solid rgba(255, 255, 255, 0.3);
 }
 
 /* HEADER */
@@ -101,7 +102,7 @@ header h2 {
 }
 
 header p {
-  color: var(--text-color);
+  color: var(--sub-text-color);
   font-size: 14px;
 }
 
@@ -109,7 +110,7 @@ header p {
 .cd {
   display: flex;
   margin: auto;
-  width: 250px;
+  width: 230px;
 }
 
 .cd-thumb {
@@ -130,10 +131,17 @@ header p {
 }
 
 .control .btn {
-  color: #666;
-  padding: 20px;
+  color: var(--sub-text-color);
+  padding: 4px;
   font-size: 20px;
   cursor: pointer;
+  transition: transform 0.1s linear;
+}
+.control .btn:hover {
+  transform: scale(1.2, 1.2);
+}
+.control .btn:active {
+  color: var(--primary-color);
 }
 
 .control .btn.active {
@@ -141,10 +149,10 @@ header p {
 }
 
 .control .btn-toggle-play {
-  width: 60px;
-  height: 60px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
-  font-size: 28px;
+  font-size: 24px;
   color: #fff;
   display: flex;
   align-items: center;
@@ -175,37 +183,32 @@ header p {
 
 /* PLAYLIST */
 .playlist {
-  width: 450px;
+  width: 400px;
   height: 650px;
   padding: 24px;
   overflow-y: overlay;
-  /* From https://css.glass */
-  background: rgba(255, 255, 255, 0.53);
-  border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(7px);
-  -webkit-backdrop-filter: blur(7px);
-  border: 1px solid rgba(255, 255, 255, 0.3);
+  background: rgba(255, 255, 255, 0.15);
+  border-radius: 6px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border: 3px solid rgba(255, 255, 255, 0.3);
 }
 
 .song {
   display: flex;
   align-items: center;
-  margin-bottom: 16px;
+  margin-bottom: 14px;
   padding: 8px 16px;
-  border-radius: 5px;
   cursor: pointer;
-  /* From https://css.glass */
-  background: rgba(255, 255, 255, 0.26);
+  background: rgba(255, 255, 255, 0.5);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(5.2px);
-  -webkit-backdrop-filter: blur(5.2px);
-  border: 1px solid rgba(255, 255, 255, 0.5);
+  border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 .song.active {
-  background-color: var(--primary-color);
+  background-color: var(--secondary-color);
 }
 
 .song:active {
@@ -219,8 +222,8 @@ header p {
 }
 
 .song .thumb {
-  width: 54px;
-  height: 54px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
   background-size: cover;
   margin: 0 8px;
@@ -232,18 +235,18 @@ header p {
 }
 
 .song .title {
-  font-size: 18px;
+  font-size: 16px;
   color: var(--text-color);
 }
 
 .song .author {
   font-size: 12px;
-  color: #999;
+  color: var(--sub-text-color);
 }
 
 .song .option {
   padding: 16px 8px;
-  color: #999;
+  color: var(--sub-text-color);
   font-size: 18px;
 }
 
