--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,22 +20,6 @@ html {
   font-family: "Poppins", sans-serif;
 }
 
-/* Scrollbar css */
-html *::-webkit-scrollbar {
-  border-radius: 0;
-  width: 8px;
-}
-
-html *::-webkit-scrollbar-thumb {
-  border-radius: 4px;
-  background-color: var(--secondary-color);
-}
-
-html *::-webkit-scrollbar-track {
-  border-radius: 4px;
-  background-color: rgba(0, 0, 0, 0.3);
-}
-
 @keyframes playlistSlideRight {
   from {
     opacity: 0;
@@ -84,13 +68,13 @@ html *::-webkit-scrollbar-track {
   z-index: -10;
 }
 .background-video #video {
-  position: absolute;
+  position: fixed;
+  object-fit: fill;
+  pointer-events: none;
   top: 0;
   left: 0;
-  object-fit: fill;
   width: 100%;
   height: 100%;
-  pointer-events: none;
 }
 
 .player {
@@ -202,7 +186,6 @@ header p {
 
 .control .btn {
   color: var(--sub-text-color);
-  padding: 4px;
   font-size: 20px;
   cursor: pointer;
   transition: transform 0.1s linear;
@@ -230,25 +213,63 @@ header p {
   background-color: var(--primary-color);
 }
 
-.progress {
-  width: 100%;
+.progress,
+.volume {
   -webkit-appearance: none;
   appearance: none;
   height: 12px;
-  background: #d3d3d3;
+  background: rgba(255, 255, 255, 0.3);
   outline: none;
   opacity: 0.7;
   -webkit-transition: 0.2s;
   transition: opacity 0.2s;
   cursor: pointer;
+  overflow: hidden;
+}
+.progress {
+  width: 100%;
+}
+.volume {
+  width: 50%;
 }
 
-.progress::-webkit-slider-thumb {
+.volume-bar {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.progress::-webkit-slider-thumb,
+.volume::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
-  width: 10px;
+  width: 12px;
   height: 12px;
   background-color: var(--primary-color);
+  box-shadow: -200px 50px 0px 200px var(--secondary-color);
+}
+
+.volume-icon,
+.mute-icon {
+  font-size: 20px;
+  margin-right: 5px;
+  display: none;
+  cursor: pointer;
+  color: var(--sub-text-color);
+  transition: transform 0.1s linear;
+}
+.volume-icon:hover,
+.mute-icon:hover {
+  transform: scale(1.2, 1.2);
+}
+
+.mute-icon {
+  color: var(--primary-color);
+}
+.block {
+  display: block;
 }
 
 /* PLAYLIST */
@@ -333,3 +354,19 @@ header p {
   color: var(--sub-text-color);
   font-size: 12px;
 } */
+
+/* Scrollbar css */
+html *::-webkit-scrollbar {
+  border-radius: 0;
+  width: 8px;
+}
+
+html *::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: var(--secondary-color);
+}
+
+html *::-webkit-scrollbar-track {
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, 0.3);
+}
