--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -104,7 +104,7 @@ html {
   padding: 16px 16px 14px;
   background: rgba(255, 255, 255, 0.5);
   border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(2px);
   -webkit-backdrop-filter: blur(2px);
   border: 3px solid rgba(255, 255, 255, 0.3);
@@ -147,12 +147,12 @@ header {
 
 header h4 {
   color: var(--primary-color);
-  font-size: 16px;
+  font-size: 14px;
 }
 
 header h2 {
   color: var(--text-color);
-  font-size: 22px;
+  font-size: 20px;
 }
 
 header p {
@@ -164,7 +164,11 @@ header p {
 .cd {
   display: flex;
   margin: auto;
-  width: 230px;
+  width: 200px;
+  border-radius: 50%;
+  background: rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
+  border: 10px solid rgba(255, 255, 255, 0.1);
 }
 
 .cd-thumb {
@@ -174,6 +178,7 @@ header p {
   background-color: #333;
   background-size: cover;
   margin: auto;
+  image-rendering: optimizeQuality;
 }
 
 /* CONTROL */
@@ -181,7 +186,7 @@ header p {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  padding: 18px 0 8px 0;
+  padding: 8px 0 4px 0;
 }
 
 .control .btn {
@@ -213,6 +218,24 @@ header p {
   background-color: var(--primary-color);
 }
 
+.volume-bar {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10px;
+}
+.progress-bar {
+  width: 100%;
+}
+.progress-time {
+  display: flex;
+  justify-content: space-between;
+  font-size: 14px;
+  font-weight: 500;
+  align-items: center;
+}
+
 .progress,
 .volume {
   -webkit-appearance: none;
@@ -231,14 +254,6 @@ header p {
 }
 .volume {
   width: 50%;
-}
-
-.volume-bar {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 10px;
 }
 
 .progress::-webkit-slider-thumb,
@@ -283,7 +298,7 @@ header p {
   padding: 24px;
   background: rgba(255, 255, 255, 0.15);
   border-radius: 6px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
   border: 3px solid rgba(255, 255, 255, 0.3);
@@ -327,8 +342,8 @@ header p {
 }
 
 .song .thumb {
-  width: 50px;
-  height: 50px;
+  width: 48px;
+  height: 48px;
   border-radius: 50%;
   background-size: cover;
   margin: 0 8px;
@@ -336,7 +351,7 @@ header p {
 
 .song .body {
   flex: 1;
-  padding: 0 16px;
+  padding: 0 8px;
 }
 
 .song .title {
