--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,6 +20,50 @@ html {
   font-family: "Poppins", sans-serif;
 }
 
+@keyframes loader {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  25% {
+    transform: rotate(180deg);
+  }
+
+  50% {
+    transform: rotate(180deg);
+  }
+
+  75% {
+    transform: rotate(360deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes loader-inner {
+  0% {
+    height: 0%;
+  }
+
+  25% {
+    height: 0%;
+  }
+
+  50% {
+    height: 100%;
+  }
+
+  75% {
+    height: 100%;
+  }
+
+  100% {
+    height: 0%;
+  }
+}
+
 @keyframes playlistSlideRight {
   from {
     opacity: 0;
@@ -30,6 +74,7 @@ html {
     transform: translateX(56%);
   }
 }
+
 @keyframes playlistSlideLeft {
   from {
     opacity: 1;
@@ -49,6 +94,7 @@ html {
     transform: translateX(0);
   }
 }
+
 @keyframes dashboardSlideLeft {
   from {
     transform: translateX(0);
@@ -56,6 +102,40 @@ html {
   to {
     transform: translateX(-50%);
   }
+}
+.preloader {
+  display: block;
+  background-color: #242f3f;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+  opacity: 1;
+  z-index: 100;
+  transition: opacity 0.5s linear;
+}
+.preloader.fade-out {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.loader {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  position: relative;
+  border: 4px solid #fff;
+  animation: loader 2s 10 ease;
+}
+
+.loader-inner {
+  vertical-align: top;
+  display: inline-block;
+  width: 100%;
+  background-color: #fff;
+  animation: loader-inner 2s 10 ease-in;
 }
 
 .background-video {
@@ -65,7 +145,6 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: -10;
 }
 .background-video #video {
   position: fixed;
