--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -2,6 +2,11 @@
   body {
     overflow-x: hidden;
   }
+
+  .preloader {
+    display: none;
+  }
+
   .background-video {
     width: unset;
     height: unset;
