--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -71,15 +71,26 @@
     color: unset;
   }
 
+  header h4 {
+    font-size: 16px;
+  }
+
+  header h2 {
+    font-size: 20px;
+  }
+  header p {
+    font-size: 16px;
+  }
+
   /* CD */
   .cd {
     border-radius: unset;
-    box-shadow: unset;
     background: unset;
+    box-shadow: unset;
     border: unset;
   }
   .cd-thumb {
-    border-radius: unset;
+    border-radius: 5px;
     -webkit-transform: rotate(0deg) !important;
     transform: rotate(0deg) !important;
   }
@@ -136,7 +147,7 @@
     -webkit-backdrop-filter: unset;
     border: unset;
     animation: unset;
-    margin-top: 450px;
+    margin-top: 457px;
     z-index: 0;
   }
 
@@ -155,11 +166,11 @@
     box-shadow: 0 2px 3px rgba(0, 0, 0, 0.3);
   }
 
-  .song .body {
-    padding: 0 16px;
+  .song .title {
+    font-size: 16px;
   }
 
   .song .author {
-    color: #888;
+    font-size: 14px;
   }
 }
