--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -92,7 +92,7 @@ html {
   }
 }
 .preloader {
-  background: url("/assets/img/background.png") no-repeat center;
+  background: url("../img/background.png") no-repeat center;
   background-size: cover;
   position: fixed;
   display: flex;
