--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -1,5 +1,6 @@
 @media only screen and (max-width: 740px) {
   body {
+    background-color: #f0f0f0;
     overflow-x: hidden;
     scroll-behavior: smooth;
   }
