--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,37 +17,6 @@ html {
   font-family: "Poppins", sans-serif;
 }
 
-@keyframes ripple {
-  0% {
-    top: 100px;
-    left: 100px;
-    width: 0px;
-    height: 0px;
-    opacity: 0;
-  }
-  4.9% {
-    top: 100px;
-    left: 100px;
-    width: 0;
-    height: 0;
-    opacity: 0;
-  }
-  5% {
-    top: 100px;
-    left: 100px;
-    width: 0;
-    height: 0;
-    opacity: 1;
-  }
-  100% {
-    top: 0px;
-    left: 0px;
-    width: 200px;
-    height: 200px;
-    opacity: 0;
-  }
-}
-
 @keyframes playlistSlideRight {
   from {
     opacity: 0;
@@ -87,8 +56,24 @@ html {
     transform: translateX(-50%);
   }
 }
+
+@keyframes loader {
+  0% {
+    transform: scaleY(0.1);
+    background: var(--primary-color);
+  }
+  50% {
+    transform: scaleY(1);
+    background: #ffab4c;
+  }
+  100% {
+    transform: scaleY(0.1);
+    background: transparent;
+  }
+}
+
 .preloader {
-  background: linear-gradient(to top, #16222a, #3a6073);
+  background: linear-gradient(to bottom, #2e3840, #142f43);
   position: fixed;
   display: flex;
   justify-content: center;
@@ -104,22 +89,56 @@ html {
   pointer-events: none;
 }
 
-.ripple {
-  display: inline-block;
-  position: relative;
-  top: -30px;
-  width: 200px;
-  height: 200px;
-}
-.ripple div {
+.loader {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   position: absolute;
-  border: 5px solid #fff;
-  opacity: 1;
-  border-radius: 50%;
-  animation: ripple 1s cubic-bezier(0, 0.2, 0.8, 1) 20;
 }
-.ripple div:nth-child(2) {
-  animation-delay: -0.5s;
+
+.bar {
+  width: 30px;
+  height: 120px;
+  display: inline-block;
+  transform-origin: bottom center;
+  border-top-right-radius: 20px;
+  border-top-left-radius: 20px;
+  animation: loader 1s ease-in-out infinite;
+  animation-play-state: running;
+}
+.bar.pause {
+  animation-play-state: paused;
+}
+
+.bar1 {
+  animation-delay: 0.1s;
+}
+.bar2 {
+  animation-delay: 0.2s;
+}
+.bar3 {
+  animation-delay: 0.3s;
+}
+.bar4 {
+  animation-delay: 0.4s;
+}
+.bar5 {
+  animation-delay: 0.5s;
+}
+.bar6 {
+  animation-delay: 0.6s;
+}
+.bar7 {
+  animation-delay: 0.7s;
+}
+.bar8 {
+  animation-delay: 0.8s;
+}
+.bar9 {
+  animation-delay: 0.9s;
+}
+.bar10 {
+  animation-delay: 1s;
 }
 
 .background-video {
