--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -73,7 +73,7 @@ html {
 }
 
 .preloader {
-  background: linear-gradient(to bottom, #2e3840, #142f43);
+  background: linear-gradient(to top, #001c30, #2d4356);
   position: fixed;
   display: flex;
   justify-content: center;
@@ -103,7 +103,7 @@ html {
   transform-origin: bottom center;
   border-top-right-radius: 20px;
   border-top-left-radius: 20px;
-  animation: loader 1s ease-in-out infinite;
+  animation: loader 2s ease-in-out infinite;
   animation-play-state: running;
 }
 .bar.pause {
@@ -139,6 +139,36 @@ html {
 }
 .bar10 {
   animation-delay: 1s;
+}
+.bar11 {
+  animation-delay: 1.1s;
+}
+.bar12 {
+  animation-delay: 1.2s;
+}
+.bar13 {
+  animation-delay: 1.3s;
+}
+.bar14 {
+  animation-delay: 1.4s;
+}
+.bar15 {
+  animation-delay: 1.5s;
+}
+.bar16 {
+  animation-delay: 1.6s;
+}
+.bar17 {
+  animation-delay: 1.7s;
+}
+.bar18 {
+  animation-delay: 1.8s;
+}
+.bar19 {
+  animation-delay: 1.9s;
+}
+.bar20 {
+  animation-delay: 2s;
 }
 
 .background-video {
